docs: swagger update
