# app/Http/Resources/ResponseResource.php
@@ -15,8 +15,33 @@ class ResponseResource extends JsonResource
      */
     public static function handle(array|object $data, array $meta, int $statusCode = 200): JsonResponse
     {
+        if ($statusCode >= 400) {
+            throw new \Exception("Error Processing Request", 403);
+        }
+
         return response()->json([
             'data' => $data,
+            'meta' => $meta,
+        ], $statusCode);
+    }
+
+    /**
+     * @OA\Schema(
+     *  schema="UnauthorizedResponse",
+     *  @OA\Property(property="error", type="string", example="Unauthorized [Authenticate]"),
+     *  @OA\Property(property="meta", type="array", @OA\Items(
+     *      @OA\Property(
+     *         property="code",
+     *         type="integer",
+     *         example="401"
+     *      ),
+     *  )),
+     * )
+     */
+    public static function error(string $error, array $meta, int $statusCode): JsonResponse
+    {
+        return response()->json([
+            'error' => $error,
             'meta' => $meta,
         ], $statusCode);
     }
