# docs/swagger.json
@@ -7,7 +7,7 @@
     "servers": [
         {
             "url": "http://localhost:80",
-            "description": "Learning env"
+            "description": "Development in local server"
         }
     ],
     "paths": {
@@ -22,30 +22,38 @@
                     "content": {
                         "application/json": {
                             "schema": {
-                                "required": [
-                                    "documentNumber",
-                                    "password"
-                                ],
-                                "properties": {
-                                    "documentNumber": {
-                                        "type": "string",
-                                        "format": "text",
-                                        "example": "11122233344"
-                                    },
-                                    "password": {
-                                        "type": "string",
-                                        "format": "text",
-                                        "example": "mypass"
-                                    }
-                                },
-                                "type": "object"
+                                "$ref": "#/components/schemas/AuthLoginRequest"
                             }
                         }
                     }
                 },
                 "responses": {
                     "200": {
-                        "description": "user authenticated"
+                        "description": "success",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": {
+                                    "data": {
+                                        "access_token": "eyJ0e...",
+                                        "token_type": "bearer",
+                                        "expires_in": 3600
+                                    },
+                                    "meta": {
+                                        "user": {
+                                            "public_id": "20ce8f4a-506b-4ebd-ab10-756494da00de",
+                                            "name": "User Name Example",
+                                            "email": "email@example.com",
+                                            "document_number": "11122233344",
+                                            "type": "pf",
+                                            "updated_at": "2023-07-05T02:44:52.000000Z",
+                                            "created_at": "2023-07-05T02:44:52.000000Z",
+                                            "id": 3
+                                        }
+                                    }
+                                }
+                            }
+                        }
                     },
                     "401": {
                         "description": "document number or password is invalid"
@@ -64,40 +72,32 @@
                     "content": {
                         "application/json": {
                             "schema": {
-                                "required": [
-                                    "documentNumber",
-                                    "password"
-                                ],
-                                "properties": {
-                                    "name": {
-                                        "type": "string",
-                                        "example": "João Neves"
-                                    },
-                                    "email": {
-                                        "type": "email",
-                                        "example": "joao@example.com"
-                                    },
-                                    "documentNumber": {
-                                        "type": "string",
-                                        "example": "11122233344"
-                                    },
-                                    "password": {
-                                        "type": "string",
-                                        "example": "mypass"
-                                    },
-                                    "type": {
-                                        "type": "string",
-                                        "example": "pf"
-                                    }
-                                },
-                                "type": "object"
+                                "$ref": "#/components/schemas/AuthStoreRequest"
                             }
                         }
                     }
                 },
                 "responses": {
                     "200": {
-                        "description": "user created"
+                        "description": "success",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": {
+                                    "data": {
+                                        "public_id": "20ce8f4a-506b-4ebd-ab10-756494da00de",
+                                        "name": "User Name Example",
+                                        "email": "email@example.com",
+                                        "document_number": "11122233344",
+                                        "type": "pf",
+                                        "updated_at": "2023-07-05T02:44:52.000000Z",
+                                        "created_at": "2023-07-05T02:44:52.000000Z",
+                                        "id": 3
+                                    },
+                                    "meta": []
+                                }
+                            }
+                        }
                     },
                     "500": {
                         "description": "error to create user"
@@ -114,15 +114,33 @@
                 "operationId": "1deead8175ec826e4eff4671de92fbf3",
                 "responses": {
                     "200": {
-                        "description": "user created"
+                        "description": "success",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": {
+                                    "data": {
+                                        "success": true
+                                    },
+                                    "meta": []
+                                }
+                            }
+                        }
                     },
-                    "500": {
-                        "description": "error to create user"
+                    "401": {
+                        "description": "unauthorized",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/UnauthorizedResponse"
+                                }
+                            }
+                        }
                     }
                 },
                 "security": [
                     {
-                        "scalar": "jwt"
+                        "bearer": []
                     }
                 ]
             }
@@ -138,30 +156,33 @@
                     "content": {
                         "application/json": {
                             "schema": {
-                                "required": [
-                                    "payeeId",
-                                    "amount"
-                                ],
-                                "properties": {
-                                    "payeeId": {
-                                        "type": "string",
-                                        "format": "text",
-                                        "example": "31bf19b0-1a2c-11ee-be56-0242ac120002"
-                                    },
-                                    "amount": {
-                                        "type": "numeric",
-                                        "format": "text",
-                                        "example": "100"
-                                    }
-                                },
-                                "type": "object"
+                                "$ref": "#/components/schemas/TransactionStoreRequest"
                             }
                         }
                     }
                 },
                 "responses": {
                     "200": {
-                        "description": "transaction created"
+                        "description": "success",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": {
+                                    "data": [],
+                                    "meta": []
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "unauthorized",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/UnauthorizedResponse"
+                                }
+                            }
+                        }
                     },
                     "500": {
                         "description": "error to create transaction"
@@ -169,7 +190,7 @@
                 },
                 "security": [
                     {
-                        "scalar": "jwt"
+                        "bearer": []
                     }
                 ]
             }
@@ -183,18 +204,142 @@
                 "operationId": "9174a569ffd5f82da6d1982c9382d3ba",
                 "responses": {
                     "200": {
-                        "description": "Success"
+                        "description": "success",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": {
+                                    "data": {
+                                        "id": 1,
+                                        "public_id": "4b0a8cf3-dbb0-43a1-9b99-a90056793ade",
+                                        "name": "User Name",
+                                        "email": "user@mail.com",
+                                        "document_number": "12345678900",
+                                        "type": "pf",
+                                        "created_at": "2023-07-04T05:58:15.000000Z",
+                                        "updated_at": "2023-07-04T05:58:15.000000Z",
+                                        "deleted_at": null
+                                    },
+                                    "meta": {
+                                        "balance": 1000
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "unauthorized",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/UnauthorizedResponse"
+                                }
+                            }
+                        }
                     }
                 },
                 "security": [
                     {
-                        "scalar": "jwt"
+                        "bearer": []
                     }
                 ]
             }
         }
     },
     "components": {
+        "schemas": {
+            "AuthLoginRequest": {
+                "required": [
+                    "documentNumber",
+                    "password"
+                ],
+                "properties": {
+                    "documentNumber": {
+                        "type": "string",
+                        "format": "text",
+                        "example": "11122233344"
+                    },
+                    "password": {
+                        "type": "string",
+                        "format": "text",
+                        "example": "mypass"
+                    }
+                },
+                "type": "object"
+            },
+            "AuthStoreRequest": {
+                "required": [
+                    "name",
+                    "email",
+                    "documentNumber",
+                    "password",
+                    "type"
+                ],
+                "properties": {
+                    "name": {
+                        "type": "string",
+                        "example": "User Name Example"
+                    },
+                    "email": {
+                        "type": "email",
+                        "example": "email@example.com"
+                    },
+                    "documentNumber": {
+                        "type": "string",
+                        "example": "11122233344"
+                    },
+                    "password": {
+                        "type": "string",
+                        "example": "mypass"
+                    },
+                    "type": {
+                        "type": "string",
+                        "example": "pf"
+                    }
+                },
+                "type": "object"
+            },
+            "TransactionStoreRequest": {
+                "required": [
+                    "payeeId",
+                    "amount"
+                ],
+                "properties": {
+                    "payeeId": {
+                        "type": "string",
+                        "format": "text",
+                        "example": "31bf19b0-1a2c-11ee-be56-0242ac120002"
+                    },
+                    "amount": {
+                        "type": "numeric",
+                        "format": "text",
+                        "example": "100"
+                    }
+                },
+                "type": "object"
+            },
+            "UnauthorizedResponse": {
+                "properties": {
+                    "error": {
+                        "type": "string",
+                        "example": "Unauthorized [Authenticate]"
+                    },
+                    "meta": {
+                        "type": "array",
+                        "items": {
+                            "properties": {
+                                "code": {
+                                    "type": "integer",
+                                    "example": "401"
+                                }
+                            },
+                            "type": "object"
+                        }
+                    }
+                },
+                "type": "object"
+            }
+        },
         "securitySchemes": {
             "bearer": {
                 "type": "http",
